Bug 69525 - [GM45, bisected] Piglit tex-shadow2drect fails
Summary: [GM45, bisected] Piglit tex-shadow2drect fails
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-09-18 12:33 UTC by Pavel Ondračka
Modified: 2013-09-21 23:56 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Pavel Ondračka 2013-09-18 12:33:26 UTC
I recently did some piglit testing and noticed two old unreported regressions on my GM45 in tests/spec/arb_fragment_program_shadow/tex-shadow2drect.shader_test and tests/spec/arb_fragment_program_shadow/txp-shadow2drect.shader_test

Its caused by commit 
commit 97615b2d8c7c3cea6fd3a43bcb1739a96e2046c4
Author: Eric Anholt <eric@anholt.net>
Date:   Mon Aug 27 14:35:01 2012 -0700

    i965: Replace brw_wm_* with dumping code into the fs_visitor.
    
    This makes a giant pile of code newly dead.  It also fixes TXB on newer
    chipsets, which has been totally broken (I now have a piglit test for that).
    It passes the same set of Ian's ARB_fragment_program tests.  It also improve
    high-settings ETQW performance by 3.2 +/- 1.9% (n=3), thanks to better
    optimization and having 8-wide along with 16-wide shaders.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=24355
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>

Another regression from that commit was in the past tracked in bug 55825, so I just made a comment in bug 55825 comment 5, cause I thought it is a duplicate. Bug 55825 was however closed some time ago and this regression is still present. 

BTW the tests doesn't fail everytime, there is some chance of pass (like 5-10 passes in 100 runs).

./bin/shader_runner tests/spec/arb_fragment_program_shadow/tex-shadow2drect.shader_test -auto
Output:
Probe at (0,25)
  Expected: 1.000000 1.000000 1.000000 1.000000
  Observed: 0.000000 0.000000 0.000000 1.000000
Probe at (225,249)
  Expected: 1.000000 1.000000 1.000000 1.000000
  Observed: 0.000000 0.000000 0.000000 1.000000

./bin/shader_runner tests/spec/arb_fragment_program_shadow/txp-shadow2drect.shader_test -auto
Output:
Probe at (0,25)
  Expected: 1.000000 1.000000 1.000000 1.000000
  Observed: 0.000000 0.000000 0.000000 1.000000
Probe at (225,249)
  Expected: 1.000000 1.000000 1.000000 1.000000
  Observed: 0.000000 0.000000 0.000000 1.000000

GPU:GM45
Mesa: ec44d56a5b20632bcd4cb19ae6fa5d615df4149f
Kernel: 3.10.11-100.fc18.x86_64
Libdrm: 2.4.45-1.fc18
Comment 1 Eric Anholt 2013-09-18 18:45:11 UTC
I think I see the bug (m4 not getting set to 0)
Comment 2 Eric Anholt 2013-09-18 19:35:52 UTC
Nope, that wasn't it, but I've got a patch to test now.
Comment 3 Eric Anholt 2013-09-21 23:56:45 UTC
commit 938956ad52bc7659212b5877080967d4af0aad81
Author: Eric Anholt <eric@anholt.net>
Date:   Wed Sep 18 12:32:31 2013 -0700

    i965/gen4: Fix fragment program rectangle texture shadow compares.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.