src/mesa/drivers/dri/i965/brw_fs_fp.cpp
@@ -490,14 +490,14 @@ fs_visitor::emit_fragment_program_code()
          ir_constant_data junk_data;
          ir->coordinate = new(mem_ctx) ir_constant(coordinate_type, &junk_data);
 
-         coordinate = rescale_texcoord(ir, coordinate,
-                                       fpi->TexSrcTarget == TEXTURE_RECT_INDEX,
-                                       fpi->TexSrcUnit, fpi->TexSrcUnit);
-
          if (fpi->TexShadow) {
             shadow_c = regoffset(coordinate, 2);
             ir->shadow_comparitor = new(mem_ctx) ir_constant(0.0f);
          }
+
+         coordinate = rescale_texcoord(ir, coordinate,
+                                       fpi->TexSrcTarget == TEXTURE_RECT_INDEX,
+                                       fpi->TexSrcUnit, fpi->TexSrcUnit);
 
          fs_inst *inst;
          if (brw->gen >= 7) {
